--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -20,3 +20,7 @@ jobs:
         
       - name: hello-action
         uses: ./.github/actions/hello-world
+        with:
+          first-greeting: "Amandine"
+          second-greeting: "You, stranger"
+          third-greeting: "My friend"
