Test with third param only

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -21,6 +21,4 @@ jobs:
       - name: hello-action
         uses: ./.github/actions/hello-world
         with:
-          first-greeting: "Amandine"
-          second-greeting: "You, stranger"
-          third-greeting: "My friend"
+          third-greeting: "YOU"
